--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -52,34 +52,35 @@
     overflow-x: hidden;
 
     .message {
-      max-width: 70%; /* Limita a largura máxima para manter a mensagem legível */
+      max-width: 70%;
+      /* Limita a largura máxima para manter a mensagem legível */
       width: fit-content;
       display: flex;
       gap: 20px;
-      
+
       &.own {
         align-self: flex-end;
-    
+
         .texts {
           p {
             background-color: #5183fe;
             display: block;
             width: 100%;
             word-wrap: break-word;
-            overflow-wrap: break-word; 
-            white-space: pre-wrap; 
-            box-sizing: border-box;   
+            overflow-wrap: break-word;
+            white-space: pre-wrap;
+            box-sizing: border-box;
           }
         }
       }
-    
+
       img {
         width: 50px;
         height: 50px;
         border-radius: 50%;
         object-fit: cover;
       }
-    
+
       .texts {
         flex: 1;
         display: flex;
@@ -88,30 +89,30 @@
 
         p {
           width: fit-content;
-          padding: 12px 16px; 
+          padding: 12px 16px;
           background-color: rgba(17, 25, 40, 0.3);
           border-radius: 10px;
-    
+
           display: block;
-          max-width: 100%; 
+          max-width: 100%;
           word-wrap: break-word;
-          overflow-wrap: break-word; 
-          white-space: pre-wrap; 
-          box-sizing: border-box; 
-    
+          overflow-wrap: break-word;
+          white-space: pre-wrap;
+          box-sizing: border-box;
+
           &.prediction {
             background: transparent;
             padding: 0px;
           }
         }
-    
+
         span {
           font-size: 13px;
           padding-left: 1%;
         }
       }
     }
-    
+
   }
 
   .bottom {
@@ -142,15 +143,21 @@
     .form-container {
       width: 100%;
       display: flex;
+    }
+
+    .form-group {
+      width: 100%;
+      display: flex;
       align-items: center;
       gap: 10px;
       flex: 1;
     }
 
-    .form-container label {
+    .form-group label {
       display: flex;
       align-items: center;
       gap: 10px;
+      word-wrap: break-word;
     }
 
     .form-container form {
@@ -158,10 +165,9 @@
       align-items: center;
       gap: 10px;
       flex: 1;
-      width: 100%;
     }
 
-    .form-container .chatInput {
+    .form-group .chatInput {
       padding: 8px;
       border: 1px solid #ccc;
       border-radius: 5px;
@@ -171,6 +177,7 @@
       height: 100%;
       width: 100%;
       resize: vertical;
+      display: flex;
     }
 
     .form-container .sendButton {
@@ -184,5 +191,42 @@
     }
 
   }
+
+  @media (max-width: 624px) {
+    .bottom {
+      padding: 10px;
+      display: flex;
+      position: fixed;
+    }
+
+    .body {
+      padding-bottom: 150px;
+    }
+
+    .form-container {
+      flex-direction: column;
+    }
+
+    .form-container form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    .form-group {
+      display: flex;
+      gap: 5px;
+    }
+
+    .form-container label {
+      font-size: 0.85rem;
+    }
+
+    .form-container .sendButton {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
 
 }
