--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -200,7 +200,12 @@
     }
 
     .body {
-      padding-bottom: 150px;
+      padding: 10px 20px 150px 20px;
+      .message {
+        max-width: 100%;
+        font-size: .95rem;
+        gap: 10px;
+      }
     }
 
     .form-container {
@@ -215,7 +220,7 @@
 
     .form-container .chatInput {
       width: 100%;
-      font-size: .65rem;
+      font-size: .90rem;
     }
 
     .form-group {
@@ -224,7 +229,7 @@
     }
 
     .form-container label {
-      font-size: .65rem;
+      font-size: .72rem;
       width: 25%;
     }
 
