--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,9 @@
 }
 
 html, body {
-  overflow-x: hidden;
-  overflow-y: hidden;
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Evita que a página tenha scroll indesejado */
 }
 
 body {
@@ -21,6 +20,7 @@ body {
   background-size: cover;
   height: 100vh;
   color: black;
+  position: fixed;
 }
 
 .container {
