--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -207,9 +207,9 @@
   .body {
     padding: 10px 20px 150px 20px !important;
     .message {
-      max-width: 100%;
-      font-size: .95rem;
-      gap: 10px;
+      max-width: 95% !important;
+      font-size: .95rem !important;
+      gap: 15px !important;
     }
   }
 
